# online_mart

./: README.md  compose.yaml
inventory_service/: .env  Dockerfile
inventory_service/app/: .gitignore  main.py  settings.py
inventory_service/app/controllers/: item_controller.py  stock_controller.py
inventory_service/app/db/: db_connector.py
inventory_service/app/models/: item_model.py
order_service/: Dockerfile
order_service/app/: main.py
order_service/app/controllers/: crud_cart.py  crud_order.py
order_service/app/models/: cart_model.py  order_model.py
product_service/: Dockerfile  README.md  pyproject.toml
product_service/app/: main.py
product_service/app/controllers/: crud_product.py
product_service/app/models/: categories_model.py  product_model.py
product_service/app/utils/: auth_admin.py
product_service/tests/: .env_backend
user_service/: .env  .envbackup  Dockerfile  README.md
user_service/app/: main.py  settings.py
user_service/app/controllers/: auth_admin.py  auth_user.py  crud_admin.py  crud_user.py
user_service/app/db/: db_connector.py
user_service/app/models/: admin_model.py  user_model.py
user_service/app/utils/: auth.py
